# swagger.yaml
@@ -4,6 +4,7 @@ info:
   version: 0.0.01
 servers:
   - url: http://127.0.0.1:8000/api/
+  - url: https://serene-brushlands-83105-991e10aafce0.herokuapp.com/api/
 tags:
   - name: register
     description: Registration of a new user.
@@ -50,20 +51,41 @@ paths:
       summary: View the list of dealerships
       description: Endpoint to get a dealerships
       operationId: getDealerships
+      parameters:
+        - name: name
+          in: query
+          description:  Search by name
+          required: false
+          schema:
+            type: string
+        - name: limit
+          in: query
+          description: Number of items to return
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: offset
+          in: query
+          description: Starting object for the page (exclusive)
+          required: false
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Dealership'
+                $ref: '#/components/schemas/DealershipList'
   /dealership/{id}:
     get:
       tags:
         - dealership
       summary: Get an dealerships by id
       description: Endpoint to get an dealerships by id
-      operationId: getВealershipsById
+      operationId: getDealershipsById
       parameters:
         - name: id
           in: path
@@ -94,13 +116,49 @@ paths:
       summary: View the list of car
       description: Endpoint to get a cars
       operationId: getCars
+      parameters:
+        - name: car_type__brand
+          in: query
+          description:  Search by car brand
+          required: false
+          schema:
+            type: string
+        - name: car_type__model
+          in: query
+          description:  Search by car model
+          required: false
+          schema:
+            type: string
+        - name: ordering
+          in: query
+          description:  Filtering  by year or price
+          required: false
+          schema:
+            type: string
+            enum:
+              - car_type__price
+              - year
+        - name: limit
+          in: query
+          description: Number of items to return
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: offset
+          in: query
+          description: Starting object for the page (exclusive)
+          required: false
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Cars'
+                $ref: '#/components/schemas/CarsList'
   /car/{id}:
     get:
       tags:
@@ -225,7 +283,7 @@ paths:
               schema:
                  $ref: '#/components/schemas/Message'
               example: {"message": "Car 3 added in order 1",
-                        "url": "/api/order/confirm/1/"}
+                        "url": "http://127.0.0.1:8000/api/order/confirm/1/"}
         "401":
           description: Unauthorized
           content:
@@ -346,7 +404,7 @@ paths:
             application/json:
               schema:
                  $ref: '#/components/schemas/Message'
-              example: {"message": "The order 1 is paid"}
+              example: {"invoice_url": "https://pay.mbnk.biz/24331243qagJkpjS"}
         "401":
           description: Unauthorized
           content:
@@ -447,6 +505,26 @@ components:
         email:
           type: string
           example: "user@example.com"
+    DealershipList:
+      required:
+        - next
+        - previous
+        - results
+      type: object
+      properties:
+        count:
+            type: integer
+            example: 4
+        next:
+          type: string
+          example: http://127.0.0.1:8000/api/dealership/?limit=1&offset=4
+        previous:
+          type: string
+          example: http://127.0.0.1:8000/api/dealership/?limit=1&offset=2
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Dealership'
     Dealership:
       required:
         - id
@@ -461,8 +539,6 @@ components:
         name:
           type: string
           example: "DealershipName"
-        available_car:
-          $ref: '#/components/schemas/Car'
     CarType:
       required:
         - id
@@ -513,6 +589,26 @@ components:
         photo:
           type: string
           example: "url.photo"
+    CarsList:
+      required:
+        - next
+        - previous
+        - results
+      type: object
+      properties:
+        count:
+            type: integer
+            example: 100
+        next:
+          type: string
+          example: http://127.0.0.1:8000/api/car/?limit=1&offset=6
+        previous:
+          type: string
+          example: http://127.0.0.1:8000/api/car/?limit=1&offset=5
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Car'
     Cars:
       type: array
       items:
